# RocketModel

./: pyproject.toml
src/: main.py
src/Config/: Simulation_Config.py
src/GUI/: FigureWidget.py  MainUi.py  SimulationConfigUi.py
src/rocket_model/: main.py
