[tool.poetry]
name = "rocketmodel"
version = "2.0.0"
description = "Simple rocket model for flight simulations"
authors = ["andrerhenry <kinghenry238@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^2.1.2"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
PySide6 = "^6.7.3"
pyside6-essentials = "^6.7.3"

[tool.poetry.dependencies.config]
path = "src/roceket_model/config"

[tool.poetry.dependencies.gui]
path = "src/rocket_model/gui"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
